<resources>
    <string name="app_name">EAD_ECommerce_App</string>
    <string name="allproducts">All Products</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See All</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="orders">Orders</string>
    <string name="explorer">Explorer</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Order Confirmation</string>
    <string name="my_orders">My Orders</string>
    <string name="subtotal">Subtotal</string>
    <string name="fee_delivery">Delivery Fee</string>
    <string name="total_tax">Total Tax</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_cash_when_the_item_arrives_at_the_destination">Pay cash when the item arrives at the destination</string>
    <string name="make_payment_from_your_online_bank_account">Make payment from your online bank account</string>
    <string name="sign_up_email_hint">Type Your Email</string>
    <string name="sign_up_pswd_hint">Type New Password</string>
    <string name="sign_up_retype_pswd_hint">Re-type New Password</string>
    <string name="sign_up_confirm_btn">Sign Up</string>
    <string name="sign_up_already_registered_btn">Already Registered? Sign In</string>
    <string name="login_email_hint">Type Your Email</string>
    <string name="login_pswd_hint">Type Your Password</string>
    <string name="login_forgot_pswd_txt">I forgot my password.</string>
    <string name="login_signin_btn">Sign In</string>
    <string name="login_register_btn_old">Not Registered Yet? , Sign Up</string>
    <string name="login_register_btn">Not Registered Yet? Sign Up</string>
    <string name="profile_name_placeholder">John Doe</string>
    <string name="profile_email_placeholder">johndoe@gmail.com</string>
    <string name="edit_profile_btn">Edit Profile</string>
    <string name="t_and_c_btn">Terms And Conditions</string>
    <string name="policies_btn">Policies</string>
    <string name="deac_acc_btn">DEACTIVATE ACCOUNT</string>
    <string name="logout_btn">LOG OUT</string>
    <string name="profile_photo_description">Profile Picture</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="update_btn_txt">Update</string>
</resources>