<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_screen"
    tools:context=".Activity.CustomerProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Profile Image -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/default_profile_photo" />

            <!-- User Name -->
            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/profile_name_placeholder"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Email -->
            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/profile_email_placeholder"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/editProfileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Edit Profile Icon -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/edit_profile_icon"
                    app:tint="@android:color/black" />

                <!-- Edit Profile Text -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/edit_profile_btn"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- Arrow Icon -->
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/right_arrow"
                    app:tint="@android:color/black" />

            </LinearLayout>

            <!-- Terms and Conditions Item -->
            <LinearLayout
                android:id="@+id/termsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Terms Icon -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/terms_and_conditions"
                    app:tint="@android:color/black" />

                <!-- Terms and Conditions Text -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/t_and_c_btn"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- Arrow Icon -->
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/right_arrow"
                    app:tint="@android:color/black" />
            </LinearLayout>

            <!-- Policies Item -->
            <LinearLayout
                android:id="@+id/policiesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <!-- Policies Icon -->
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="20dp"
                    android:src="@drawable/policies"
                    app:tint="@android:color/black" />

                <!-- Policies Text -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_weight="1"
                    android:text="@string/policies_btn"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- Arrow Icon -->
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/right_arrow"
                    app:tint="@android:color/black" />
            </LinearLayout>

            <!-- Deactivate Account Button -->
            <Button
                android:id="@+id/deactivateAccountButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:backgroundTint="#8A0000"
                android:elevation="8dp"
                android:text="@string/deac_acc_btn"
                android:textColor="@android:color/white" />

            <!-- Logout Button -->
            <Button
                android:id="@+id/logoutButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/orange"
                android:elevation="8dp"
                android:text="@string/logout_btn"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>